fix: mobile grid overflow

--- a/assets/sass/_partial/_post.scss
+++ b/assets/sass/_partial/_post.scss
@@ -5,7 +5,7 @@
   grid-template-areas: "toc content sidebar";
 
   @include style-to-mobile() {
-    grid-template-columns: 1fr;
+    grid-template-columns: minmax(0, 1fr);
     grid-template-areas: "content" "toc" "sidebar";
   }
 
